# docs/swagger.json
@@ -16,39 +16,259 @@
     "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
-        "/health": {
+        "/encounters": {
             "get": {
-                "description": "health check",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Get All Encounters",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "health",
+                "tags": [
+                    "Encounter"
+                ],
+                "summary": "Get All Encounters",
                 "parameters": [
                     {
-                        "type": "boolean",
-                        "name": "checkDB",
+                        "type": "integer",
+                        "name": "pageID",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "pageSize",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "userID",
                         "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "success response",
                         "schema": {
-                            "$ref": "#/definitions/output.HealthResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/output.ListEncounterResponse"
+                            }
                         }
+                    },
+                    "400": {
+                        "description": "error response"
+                    },
+                    "500": {
+                        "description": "error response"
+                    }
+                }
+            },
+            "post": {
+                "description": "Create Encount entory",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Encounter"
+                ],
+                "summary": "Create Encounter",
+                "parameters": [
+                    {
+                        "description": "create encounter request",
+                        "name": "CreateEncounterRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/input.CreateEncounterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success response",
+                        "schema": {
+                            "$ref": "#/definitions/output.CreateEncounterResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "error response"
+                    },
+                    "500": {
+                        "description": "error response"
+                    }
+                }
+            }
+        },
+        "/encounters/{encounter_id}": {
+            "get": {
+                "description": "Get All Encounters",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Encounter"
+                ],
+                "summary": "Get All Encounters",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "list encounter request",
+                        "name": "encounter_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success response",
+                        "schema": {
+                            "$ref": "#/definitions/output.ListEncounterResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "error response"
+                    },
+                    "500": {
+                        "description": "error response"
+                    }
+                }
+            }
+        },
+        "/users": {
+            "post": {
+                "description": "Create User",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Create User",
+                "parameters": [
+                    {
+                        "description": "create user request",
+                        "name": "CreateUser",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/input.CreateUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success response",
+                        "schema": {
+                            "$ref": "#/definitions/output.CreateUserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "error response"
+                    },
+                    "409": {
+                        "description": "error response"
+                    },
+                    "500": {
+                        "description": "error response"
+                    }
+                }
+            }
+        },
+        "/users/{user_id}": {
+            "delete": {
+                "description": "Delete User",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Delete User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "create user request",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success response",
+                        "schema": {
+                            "$ref": "#/definitions/output.DeleteUserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "error response"
+                    },
+                    "409": {
+                        "description": "error response"
+                    },
+                    "500": {
+                        "description": "error response"
                     }
                 }
             }
         }
     },
     "definitions": {
-        "output.HealthResponse": {
+        "input.CreateEncounterRequest": {
+            "type": "object",
+            "properties": {
+                "encounted_user_id": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "input.CreateUser": {
+            "type": "object",
+            "properties": {
+                "github_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "output.CreateEncounterResponse": {
+            "type": "object",
+            "properties": {
+                "encounter_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "output.CreateUserResponse": {
             "type": "object",
             "properties": {
                 "message": {
+                    "description": "ユーザの情報",
+                    "type": "string"
+                }
+            }
+        },
+        "output.DeleteUserResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "output.ListEncounterResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "encounter_id": {
+                    "type": "string"
+                },
+                "encouted_user_id": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
